--- a/_config.yml
+++ b/_config.yml
@@ -15,33 +15,30 @@ timezone: Asia/Shanghai
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # --------------------------
-title: Chirpy                          # the main title
+title: Hi!FuYun                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Non-class'dev   # it will display as the sub-title
 
-description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+description: 开心呢就行
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://hifuyun.com'
 
 github:
-  username: github_username             # change to your github username
+  username: haifuyun             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: haifuyun            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: haifuyun
   email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/haifuyun      # change to your twitter homepage
+    - https://github.com/haifuyun      # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -77,7 +74,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://cdn.jsdelivr.net/gh/cotes2020/chirpy-images/commons/avatar.jpg
+avatar: https://pbs.twimg.com/profile_images/661212370547552257/xbqo4JqZ_400x400.jpg
 
 # boolean type, the global switch for ToC in posts.
 toc: true
