--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ tagline: Non-class'dev   # it will display as the sub-title
 description: 开心呢就行
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: 'https://hifuyun.com'
+url: 'https://hifuyun.sbs'
 
 github:
   username: haifuyun             # change to your github username
